--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_1DocumentLoader_pdf_Upstage.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_1DocumentLoader_pdf_Upstage.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4cd87a33-0a37-461b-8f37-3c142e60b1f6",
    "metadata": {
     "id": "4cd87a33-0a37-461b-8f37-3c142e60b1f6"
@@ -33,10 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dfd95056",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -61,10 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a675b9cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==> 1. 문서 로딩 → PDF 읽기...\n",
+      "  총 39페이지 로드 완료\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
@@ -83,10 +100,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fa00c954",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==> 2. 문서 분할 → 작은 청크로 나누기\n",
+      "  66개 청크 생성 완료\n",
+      "  평균 청크 길이: 688자\n",
+      "<class 'langchain_core.documents.base.Document'>\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "print(\"==> 2. 문서 분할 → 작은 청크로 나누기\")\n",
@@ -104,10 +132,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3c290f25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==> 3. 벡터화 → 임베딩으로 변환\n",
+      "==> 4. 저장 → FAISS 벡터스토어에 저장\n",
+      " FAISS 벡터스토어 생성 완료 (66개 벡터)\n",
+      "===> 5. 검색 → 질문과 유사한 문서 찾기\n",
+      " Retriever 설정 완료\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "print(\"==> 3. 벡터화 → 임베딩으로 변환\")\n",
@@ -129,10 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "edf84836",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===> 6. 생성 → LLM으로 답변 생성\n",
+      "client=<openai.resources.chat.completions.completions.Completions object at 0x10c9f5310> async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x10c9f6090> model_name='solar-pro' temperature=0.5 model_kwargs={} upstage_api_key=SecretStr('**********') upstage_api_base='https://api.upstage.ai/v1'\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "print(\"===> 6. 생성 → LLM으로 답변 생성\")\n",
@@ -146,10 +195,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "331d4e8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 프롬프트 설정 완료\n",
+      "input_variables=['context', 'question'] input_types={} partial_variables={} template='\\n당신은 BlueJ 프로그래밍 환경 전문가입니다. \\n아래 문서 내용을 바탕으로 정확하고 친절한 답변을 제공해주세요.\\n\\n문서 내용:\\n{context}\\n\\n질문: {question}\\n\\n답변 규칙:\\n1. 문서 내용만을 근거로 답변하세요\\n2. 단계별 설명이 필요하면 순서대로 작성하세요  \\n3. 구체적인 메뉴명, 버튼명을 포함하세요\\n4. 문서에 없는 정보는 \"문서에서 찾을 수 없습니다\"라고 하세요\\n\\n답변:'\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# 한국어 최적화 프롬프트\n",
@@ -180,10 +238,297 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9563fe29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " ===> 7.  QA 체인 생성...\n",
+      "  RAG 파이프라인 구축 완료!\n",
+      "\n",
+      "============================================================\n",
+      " RAG 시스템 테스트\n",
+      "============================================================\n",
+      "\n",
+      "【테스트 1/5】\n",
+      " 질문: BlueJ에서 객체를 생성하는 방법은 무엇인가요?\n",
+      " 답변 생성 중...\n",
+      "\n",
+      " 답변:\n",
+      "--------------------------------------------------\n",
+      "BlueJ에서 객체를 생성하는 방법은 다음과 같습니다 (문서 3.3, 3.6, 3610.6장 참조):\n",
+      "\n",
+      "1. **일반 클래스 객체 생성 방법**:\n",
+      "   - 메인 윈도우 중앙의 클래스 아이콘(예: `Person`, `Staff`)에서 마우스 오른쪽 버튼 클릭 (Mac: Ctrl+클릭)\n",
+      "   - 팝업 메뉴에서 `new [클래스명](...)` 형식의 생성자 선택\n",
+      "   - 객체 이름 입력 대화상자가 나타나면 기본 이름(예: `staff1`) 사용 또는 새 이름 입력 후 **OK** 버튼 클릭\n",
+      "   - 생성된 객체는 오브젝트 벤치(Object Bench)에 표시됨\n",
+      "\n",
+      "2. **라이브러리 클래스 객체 생성 방법** (3610.6장):\n",
+      "   - 상단 메뉴에서 **Tools - Use Libraries Class** 선택\n",
+      "   - 팝업 대화상자에 패키지명 포함 전체 클래스명 입력 (예: `java.util.ArrayList`, `java.lang.String`)\n",
+      "   - 엔터(Enter) 키 입력\n",
+      "   - 표시된 생성자 목록에서 원하는 생성자 선택\n",
+      "   - 매개변수 입력 후 객체 생성\n",
+      "\n",
+      "3. **주의사항**:\n",
+      "   - 추상 클래스(<<abstract>> 표기)는 객체 생성 불가\n",
+      "   - 생성자 호출 시 매개변수 필요 시 대화상자에서 입력해야 함\n",
+      "\n",
+      "예시:  \n",
+      "`Staff` 객체 생성 시 기본 이름 `staff1`을 수락하면 오브젝트 벤치에 즉시 추가되며, 이후 해당 객체의 public 메소드를 실행할 수 있습니다.  \n",
+      "\n",
+      "(문서에서 찾을 수 없는 정보: 단축키, 드래그 앤 드롭 등 추가 기능)\n",
+      "\n",
+      " 참조 문서:\n",
+      "   1. 페이지 1: 3.1. BlueJ 시작하기 ············································· ··················...\n",
+      "   2. 페이지 35: 3610.6. 라이브러리 클래스로부터 객체생성하기 BlueJ 는 JDK에서 제공하는 라이브러리의 클래스들로부터 객체를 생성하기 위한 기능을  제...\n",
+      "   3. 페이지 7: 83.2. 프로젝트 열기 프로젝트란, 관련 있는 여러개의 파일들을 묶어서 관리하기 위한 하나의 작업 단위를 말합니다.  BlueJ  프로젝트는 ...\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "【테스트 2/5】\n",
+      " 질문: 컴파일 오류가 발생했을 때 어떻게 확인할 수 있나요?\n",
+      " 답변 생성 중...\n",
+      "\n",
+      " 답변:\n",
+      "--------------------------------------------------\n",
+      "BlueJ에서 컴파일 오류를 확인하는 방법은 다음과 같습니다. 문서 내용을 바탕으로 단계별로 안내드립니다:\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 1. **에디터 창에서 직접 확인**\n",
+      "   - **에러 위치 표시**: 컴파일 시 구문 에러가 발생하면 해당 라인이 반전됩니다 (하이라이트 표시).\n",
+      "   - **에러 메시지 확인**: 에디터 하단의 **정보창(information area)**에 구체적인 에러 메시지가 표시됩니다.  \n",
+      "     *(예: 세미콜론 누락, 괄호 불일치 등)*\n",
+      "\n",
+      "### 2. **물음표(?) 버튼 클릭**  \n",
+      "   - 정보창 오른쪽의 **물음표(?) 아이콘**을 클릭하면 해당 에러에 대한 추가 도움말을 확인할 수 있습니다.  \n",
+      "     *(그림 8 참조, 일부 에러는 아직 도움말이 작성 중일 수 있음)*\n",
+      "\n",
+      "### 3. **프로젝트 툴바의 Compile 버튼 사용 시**  \n",
+      "   - 전체 프로젝트를 컴파일할 때 에러가 발생하면:  \n",
+      "     1. 에러가 발생한 클래스의 **에디터 창이 자동으로 열립니다**.  \n",
+      "     2. 에디터 창에서 에러 위치와 메시지를 확인할 수 있습니다.  \n",
+      "   - *참고*: 수정된 클래스는 아이콘에 **체크 표시**가 나타납니다.\n",
+      "\n",
+      "### 4. **오브젝트 벤치 상태 확인**  \n",
+      "   - 컴파일 오류 발생 시 **오브젝트 벤치의 모든 객체가 사라집니다**.  \n",
+      "   - 이는 클래스 구현 변경 시 자동으로 초기화되는 BlueJ의 동작입니다.\n",
+      "\n",
+      "### 5. **저장 관련 주의사항**  \n",
+      "   - 소스 코드는 에디터를 닫거나 컴파일 전에 **자동 저장**되므로, 수동으로 저장할 필요는 없습니다.  \n",
+      "   - 단, 시스템이 불안정할 경우 **Class 메뉴** > **저장** 기능을 수동으로 사용할 수 있습니다.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 요약  \n",
+      "- **에러 확인 경로**: 에디터 창 (하이라이트 + 정보창) → 물음표 버튼 → 오브젝트 벤치 초기화  \n",
+      "- **주의**: 모든 에러에 도움말이 제공되지는 않습니다 (문서 14페이지 참고).  \n",
+      "\n",
+      "문서에서 명시되지 않은 추가 기능(예: 디버깅 모드)은 \"문서에서 찾을 수 없습니다\".\n",
+      "\n",
+      " 참조 문서:\n",
+      "   1. 페이지 12: 클래스를 성공적으로 컴파일 하였다면 에디터를 닫으십시오.  프로젝트 윈도우에 툴바 역시 Compile 버튼을 가지고 있습니다. 이 컴파일 기능은...\n",
+      "   2. 페이지 12: 13  노트 : 프로젝트를 처음 열었을 때 왜 클래스 아이콘에 체크표시가 되어있지 않은지 궁금할 수 있습니다. people  프로젝트 내의 클래...\n",
+      "   3. 페이지 1: 3.1. BlueJ 시작하기 ············································· ··················...\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "【테스트 3/5】\n",
+      " 질문: 디버깅을 위해 중단점을 설정하는 방법을 알려주세요\n",
+      " 답변 생성 중...\n",
+      "\n",
+      " 답변:\n",
+      "--------------------------------------------------\n",
+      "**디버깅을 위해 중단점을 설정하는 방법**  \n",
+      "\n",
+      "문서 내용을 바탕으로 중단점 설정 방법을 단계별로 안내드립니다.  \n",
+      "\n",
+      "### **1. 중단점 설정 영역 확인**  \n",
+      "- BlueJ 편집기에서 소스코드가 표시된 영역의 **왼쪽 공백 부분**이 중단점 설정 영역입니다.  \n",
+      "- 이 영역을 클릭하면 작은 **stop 표시(■)**가 나타나며, 이는 중단점이 설정되었음을 의미합니다.  \n",
+      "\n",
+      "### **2. 중단점 설정 단계**  \n",
+      "1. **`Demo` 클래스**를 열고, **`loop` 메소드**를 찾습니다.  \n",
+      "2. `loop` 메소드 내의 **`for` 반복문** 부분에 있는 **임의의 라인**을 선택합니다.  \n",
+      "3. 해당 라인의 왼쪽 공백 부분을 **마우스 왼쪽 버튼으로 클릭**합니다.  \n",
+      "   - 중단점이 설정되면 **stop 표시(■)**가 나타납니다.  \n",
+      "\n",
+      "### **3. 중단점 테스트**  \n",
+      "1. `Demo` 클래스에서 객체를 생성한 후, **`loop(10)` 메소드를 호출**합니다.  \n",
+      "2. 프로그램 실행이 중단점에 도달하면:  \n",
+      "   - 편집기에서 **다음 실행할 라인이 반전**되어 표시됩니다.  \n",
+      "   - **디버거 윈도우**가 자동으로 열리며, 변수 상태를 확인할 수 있습니다.  \n",
+      "\n",
+      "### **4. 중단점 제거**  \n",
+      "- 중단점을 해제하려면, 설정된 라인의 왼쪽 공백 부분을 **다시 클릭**하여 stop 표시를 제거합니다.  \n",
+      "\n",
+      "### **참고 사항**  \n",
+      "- 중단점은 **소스 코드의 특정 지점에서 실행을 일시 중지**할 때 사용됩니다.  \n",
+      "- 디버거 윈도우에서 **Step**, **Step Into**, **Continue** 버튼 등을 활용해 단계별 실행이 가능합니다.  \n",
+      "\n",
+      "> 문서에 명시되지 않은 추가 기능(예: 조건 중단점)은 \"문서에서 찾을 수 없습니다\".\n",
+      "\n",
+      " 참조 문서:\n",
+      "   1. 페이지 25: 267. 디버깅 이 절에서는, BlueJ의 디버깅에 관한 기능들 중에서 가장 중요한 측면을 소개합니다. 컴퓨터  프로그래밍 담당 선생님들은 첫 ...\n",
+      "   2. 페이지 2: 37. 디버깅 ························································· ··············...\n",
+      "   3. 페이지 25: 마우스 왼쪽 버튼으로 클릭함으로써 중단점을 설정할 수 있습니다. 작은 stop 표시가 중단점을 의미합니다. 바로 시도해 봅시다. Demo  클래...\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "【테스트 4/5】\n",
+      " 질문: 코드패드는 무엇이고 어떻게 사용하나요?\n",
+      " 답변 생성 중...\n",
+      "\n",
+      " 답변:\n",
+      "--------------------------------------------------\n",
+      "### 코드패드란?  \n",
+      "코드패드는 **BlueJ**에서 자바 코드(표현식 및 명령문)의 일부분을 빠르게 평가하고 테스트할 수 있는 도구입니다. 프로그램 코드의 동작을 조사하거나 구문 예제를 시험해 볼 때 유용합니다.  \n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 코드패드 사용 방법 (단계별 설명)  \n",
+      "\n",
+      "#### 1. **코드패드 표시하기**  \n",
+      "- **메뉴 경로**: `보기` 메뉴 → `코드패드 보기` 선택  \n",
+      "- **위치**: BlueJ 메인 화면의 **오른쪽 아래** (오브젝트 벤치 옆)에 표시됩니다.  \n",
+      "- 크기 조정은 코드패드와 오브젝트 벤치 사이의 **가로/세로 선**을 드래그하여 가능합니다.  \n",
+      "\n",
+      "#### 2. **표현식 또는 명령문 입력 및 실행**  \n",
+      "- 코드패드 영역에 자바 코드를 입력합니다.  \n",
+      "  - **예시 표현식**:  \n",
+      "    ```java\n",
+      "    4 + 45  \n",
+      "    \"hello\".length()  \n",
+      "    Math.max(33, 4)  \n",
+      "    new Student()  // 프로젝트에서 정의한 클래스  \n",
+      "    ```  \n",
+      "  - **예시 명령문**:  \n",
+      "    ```java\n",
+      "    student1.setName(\"Alice\");  // 오브젝트 벤치의 객체 사용  \n",
+      "    ```  \n",
+      "- **실행 방법**: 키보드 **Enter** 키를 눌러 라인 단위로 평가합니다.  \n",
+      "  - 결과는 화면 아래에 표시되며, 타입 정보가 함께 출력됩니다(예: `(int) 49`).  \n",
+      "\n",
+      "#### 3. **멀티라인 명령문 입력**  \n",
+      "- 여러 줄의 명령문을 입력하려면 **Shift + Enter**를 사용해 줄을 추가합니다.  \n",
+      "  - 예시:  \n",
+      "    ```java\n",
+      "    int sum = 0;  \n",
+      "    sum += 10;  \n",
+      "    System.out.println(sum);  // Enter로 실행  \n",
+      "    ```  \n",
+      "- **주의**: 각 라인은 독립적으로 처리되므로, 지역 변수(`sum`)는 라인 간 유지되지 않습니다.  \n",
+      "\n",
+      "#### 4. **객체 생성 및 오브젝트 벤치로 이동**  \n",
+      "- 표현식 결과가 객체일 경우, 결과 라인의 **작은 객체 아이콘**이 표시됩니다.  \n",
+      "  - **오브젝트 벤치로 이동**: 아이콘을 드래그하여 오브젝트 벤치에 놓습니다.  \n",
+      "  - **객체 검사**: 아이콘을 **더블클릭**하면 객체 상태 검사 화면이 열립니다.  \n",
+      "\n",
+      "#### 5. **이전 입력 재사용 (이력 기능)**  \n",
+      "- **상하 화살표 키**로 이전에 입력한 코드를 다시 불러올 수 있습니다.  \n",
+      "- 코드를 수정하여 재실행할 수도 있습니다.  \n",
+      "\n",
+      "#### 6. **오브젝트 벤치의 객체 참조**  \n",
+      "- 오브젝트 벤치에 생성된 객체는 코드패드에서 직접 참조 가능합니다.  \n",
+      "  - 예시:  \n",
+      "    ```java\n",
+      "    student1.getName()  // student1은 오브젝트 벤치의 객체  \n",
+      "    ```  \n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 주의사항 (문서 기준)  \n",
+      "- 코드패드에서 정의한 지역 변수는 다른 라인과 공유되지 않습니다.  \n",
+      "- 오브젝트 벤치에 없는 객체는 인스턴스 필드로 간주되지 않으며, 코드패드 내에서만 유효합니다.  \n",
+      "- **인스턴스 필드 추가**는 코드패드에서 불가능하며, 클래스를 수정해야 합니다.  \n",
+      "\n",
+      "> 문서에 명시되지 않은 기능(예: 디버깅, 코드 자동 완성)은 \"문서에서 찾을 수 없습니다\"로 답변합니다.\n",
+      "\n",
+      " 참조 문서:\n",
+      "   1. 페이지 1: 5.2. 클래스 만들기 ················································ ··················...\n",
+      "   2. 페이지 20: 216. 코드패드의 사용 BlueJ 코드패드는 자바 코드(표현식과 명령문)의 일부분을 쉽고 빠르게 평가할 수 있는 기능을  제공합니다. 따라서,...\n",
+      "   3. 페이지 36: 15. 코드패드로부터 객체를 오브젝트 벤치로 이동하기 위해서는 객체아이콘을 드래그 하십시오. 16. 코드패드에서 생성된 객체를 검사하기 위해서는...\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "【테스트 5/5】\n",
+      " 질문: 애플릿을 만들고 실행하는 방법을 설명해주세요\n",
+      " 답변 생성 중...\n",
+      "\n",
+      " 답변:\n",
+      "--------------------------------------------------\n",
+      "### 애플릿 만들기 및 실행 방법 (BlueJ 기준)\n",
+      "\n",
+      "#### 1. **애플릿 만들기**\n",
+      "1. **새 클래스 생성**  \n",
+      "   - BlueJ 메인 화면에서 **\"New Class\"** 버튼을 클릭합니다.  \n",
+      "   - **\"New Class\"** 대화상자가 열리면, 클래스 이름을 입력하고 **타입(Type)**으로 **\"Applet\"**을 선택합니다.  \n",
+      "   - **\"OK\"**를 클릭하여 애플릿 클래스를 생성합니다.  \n",
+      "     - 생성된 클래스는 자동으로 `<<applet>>` 태그가 표시되며, 기본 골격 코드가 포함됩니다.  \n",
+      "     - 샘플 코드는 `paint` 메소드에 포함되어 있으며, 필요에 따라 코드를 수정합니다.\n",
+      "\n",
+      "2. **컴파일**  \n",
+      "   - 클래스 아이콘을 마우스 오른쪽 버튼으로 클릭 후 **\"Compile\"**을 선택하여 컴파일합니다.  \n",
+      "   - 오류 없이 컴파일되면 애플릿 실행 준비가 완료됩니다.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "#### 2. **애플릿 실행하기**  \n",
+      "1. **Run Applet 실행**  \n",
+      "   - 컴파일된 애플릿 클래스 아이콘을 마우스 오른쪽 버튼으로 클릭 후 **\"Run Applet\"**을 선택합니다.  \n",
+      "   - **\"Run Applet\"** 대화상자가 나타납니다.  \n",
+      "     - **실행 방식 선택**:  \n",
+      "       - **\"Applet Viewer\"** (권장): JDK에 포함된 애플릿 뷰어로 실행 (버전 호환성 문제 감소).  \n",
+      "       - **\"Web Browser\"**: 기본 브라우저(Windows/Mac) 또는 설정 파일에서 정의된 브라우저(유닉스)로 실행.  \n",
+      "       - **\"Generate HTML Only\"**: 웹 페이지만 생성하고 실행하지 않음.  \n",
+      "     - **\"OK\"**를 클릭하여 실행합니다.  \n",
+      "   - 애플릿 뷰어 또는 브라우저에서 애플릿이 표시됩니다.\n",
+      "\n",
+      "2. **애플릿 테스트 (Object Bench 활용)**  \n",
+      "   - 애플릿 객체를 **\"Object Bench\"**에 드래그하여 생성할 수 있습니다.  \n",
+      "   - 팝업 메뉴에서 일부 메소드를 실행하여 테스트할 수 있지만, **완전한 실행은 불가능**합니다.  \n",
+      "   - 디버깅이 필요한 경우 **\"AppletWindow\"** 클래스를 사용해야 합니다 (문서 33페이지 참조).\n",
+      "\n",
+      "---\n",
+      "\n",
+      "#### 3. **디버깅 주의사항**  \n",
+      "- **중단점 설정**:  \n",
+      "  - 애플릿 뷰어/브라우저에서 실행 시 BlueJ의 중단점이 무시됩니다.  \n",
+      "  - 디버깅이 필요하면 **\"AppletWindow\"** 클래스를 사용해야 합니다 (BlueJ 홈페이지에서 다운로드 가능).  \n",
+      "- **단계별 실행**:  \n",
+      "  - 디버거 도구(**\"Step\"**, **\"Step Into\"**)를 사용하려면 반드시 **\"AppletWindow\"** 환경에서 실행해야 합니다.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "#### 4. **예제 프로젝트 활용**  \n",
+      "- 문서 예제: **\"examples/appletdemo\"** 프로젝트를 열어 **\"CaseConverter\"** 애플릿을 테스트할 수 있습니다.  \n",
+      "- 실행 방법: 클래스 팝업 메뉴에서 **\"Run Applet\"** 선택 후 애플릿 뷰어 또는 브라우저로 실행.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 요약  \n",
+      "1. **생성**: New Class → 타입 선택 (Applet) → 코드 편집 → 컴파일.  \n",
+      "2. **실행**: 클래스 팝업 메뉴에서 **\"Run Applet\"** → 실행 방식 선택.  \n",
+      "3. **테스트**: Object Bench에서 메소드 실행 (제한적).  \n",
+      "4. **디버깅**: **\"AppletWindow\"** 클래스 필요 (별도 다운로드).  \n",
+      "\n",
+      "> 문서에 명시되지 않은 추가 기능(예: HTML 생성 세부 설정)은 **\"문서에서 찾을 수 없습니다\"**.\n",
+      "\n",
+      " 참조 문서:\n",
+      "   1. 페이지 32: 33마이크로소프트 윈도우즈나 MAC OS시스템에서, BlueJ 는 여러분의 기본 브라우저를 사용 합니다. 유닉스 시스템의 경우는, BlueJ 설...\n",
+      "   2. 페이지 31: 329. 애플릿 만들기 9.1. 애플릿 실행하기     BuleJ 는 어플리케이션 뿐만 아니라 애플릿을 만들고, 실행할 수 있습니다. 예제(ex...\n",
+      "   3. 페이지 2: 8. 독립형 어플리케이션 생성 ··············································· ···············...\n",
+      "\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# ===================================\n",
@@ -243,10 +588,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "07c8c269",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "notGrounded\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_upstage import UpstageGroundednessCheck\n",
     "\n",
@@ -272,18 +625,6 @@
     "response = groundedness_check.invoke(request_input)\n",
     "print(response)  "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c2bd25a7",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d7d910ef",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -291,7 +632,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
+   "display_name": "mylangchain-app-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
